@@ -48,6 +48,7 @@ vector<unmergeable_profile> merge_profile(list<string> const & files)
 
 	set<unmergeable_profile> spec_set;
 
+	// FIXME: what is this for ?
 	split_sample_filename model = split_sample_file(*files.begin());
 
 	list<string>::const_iterator it;
