@@ -1,3 +1,13 @@
+2003-06-03  John Levon  <levon@movementarian.org>
+
+	* from BRANCH_CALLGRAPH
+	* libdb/odb_hash.h:
+	* libdb/db_manage.c:
+	* libdb/db_insert.c: namespace safety
+
+	* libpp/partition_files.cpp:
+	* libpp/profile.cpp: spacing, add a FIXME
+
 2003-07-07  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* pp/opannotate.cpp:
